--- a/.github/workflows/V2.yml
+++ b/.github/workflows/V2.yml
@@ -5,7 +5,8 @@ on: [push, workflow_dispatch]
 jobs:
   build:
 
-    runs-on: rdp
+    runs-on:
+      group: Default
     timeout-minutes: 9999
 
 
