--- a/.github/workflows/V2.yml
+++ b/.github/workflows/V2.yml
@@ -5,7 +5,7 @@ on: [push, workflow_dispatch]
 jobs:
   build:
 
-    runs-on: windows-11-gpu-t4-4-core
+    runs-on: windows-2022-32core
     timeout-minutes: 9999
 
 
