--- a/.github/workflows/Windows-CRD.yml
+++ b/.github/workflows/Windows-CRD.yml
@@ -12,7 +12,8 @@ on:
   
 jobs:
   build:
-    runs-on: windowsboi
+    runs-on: 
+      group: Default
 
     steps:
     - uses: actions/checkout@v2
